--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,8 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  assets_audio_player: ^3.0.8
+  flutter_animate: ^4.2.0+1
   flutter:
     sdk: flutter
 
@@ -35,6 +37,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  shake: ^2.2.0
 
 dev_dependencies:
   flutter_launcher_icons: "^0.13.1"
@@ -63,6 +66,7 @@ flutter:
   assets:
     - assets/icon/
     - assets/dice/
+    - assets/audio/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
